--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Advanced Live Code Editor - Write HTML, CSS, and JavaScript with real-time preview" />
   <title>Advanced Live Code Editor | Real-time HTML, CSS & JS Preview</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta name="description" content="Advanced Live Code Editor - A real-time HTML, CSS, and JavaScript playground with instant preview, download options, and responsive design." />
+<link rel="canonical" href="https:livecode-editor.pages.dev" />
+  <meta name="keywords" content="live code editor, html css js editor, real-time preview, online IDE, web development tool, front-end playground, html editor, javascript editor, css editor" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  
+<!-- Open Graph (Facebook, LinkedIn, etc.) -->
+<meta property="og:title" content="Advanced Live Code Editor | Real-time HTML, CSS & JS Preview" />
+<meta property="og:description" content="Create, edit, and preview HTML, CSS, and JavaScript code in real time. Perfect for developers, learners, and designers." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://live-code-editor.pages.dev/" />
+<meta property="og:image" content="https://live-code-editor.pages.dev/preview.png" />
+<meta property="og:site_name" content="Advanced Code Editor" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Advanced Live Code Editor | Real-time HTML, CSS & JS Preview" />
+<meta name="twitter:description" content="Instantly preview your HTML, CSS, and JS code with the Advanced Live Code Editor. Clean interface, live preview, and downloadable projects." />
+<meta name="twitter:image" content="https://live-code-editor.pages.dev/preview.png" />
+<meta name="twitter:creator" content="@your_twitter_handle" />
+
+<!-- Additional SEO Enhancements -->
+<meta name="robots" content="index, follow" />
+<meta name="theme-color" content="#4a6cf7" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+<!-- Favicon -->
+<link rel="icon" href="https://live-code-editor.pages.dev/favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="https://live-code-editor.pages.dev/apple-touch-icon.png" />
   <style>
     :root {
       --primary: #4a6cf7;
@@ -426,4 +452,5 @@ document.getElementById("demo-btn").addEventListener("click", ()=>{
   </script>
 </body>
 </html>
+
 
