--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Advanced Live Code Editor | Real-time HTML, CSS & JS Preview</title>
   <meta name="description" content="Advanced Live Code Editor - A real-time HTML, CSS, and JavaScript playground with instant preview, download options, and responsive design." />
-<link rel="canonical" href="https:livecode-editor.pages.dev" />
+<link rel="canonical" href="https:live-code-editor.pages.dev" />
   <meta name="keywords" content="live code editor, html css js editor, real-time preview, online IDE, web development tool, front-end playground, html editor, javascript editor, css editor" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   
@@ -453,6 +453,7 @@ document.getElementById("demo-btn").addEventListener("click", ()=>{
   <script type='text/javascript' src='//demolitionzerostomach.com/22/30/0d/22300dbc090c90a734515ac5094b74cc.js'></script>
 </body>
 </html>
+
 
 
 
