--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <meta property="og:description" content="Create, edit, and preview HTML, CSS, and JavaScript code in real time. Perfect for developers, learners, and designers." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://live-code-editor.pages.dev/" />
-<meta property="og:image" content="https://live-code-editor.pages.dev/preview.png" />
+<meta property="og:image" content="https://live-code-editor.pages.dev/preview.webp" />
 <meta property="og:site_name" content="Advanced Code Editor" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Advanced Live Code Editor | Real-time HTML, CSS & JS Preview" />
 <meta name="twitter:description" content="Instantly preview your HTML, CSS, and JS code with the Advanced Live Code Editor. Clean interface, live preview, and downloadable projects." />
-<meta name="twitter:image" content="https://live-code-editor.pages.dev/preview.png" />
+<meta name="twitter:image" content="https://live-code-editor.pages.dev/preview.webp" />
 <meta name="twitter:creator" content="@your_twitter_handle" />
 
 <!-- Additional SEO Enhancements -->
@@ -453,6 +453,7 @@ document.getElementById("demo-btn").addEventListener("click", ()=>{
   <script type='text/javascript' src='//demolitionzerostomach.com/22/30/0d/22300dbc090c90a734515ac5094b74cc.js'></script>
 </body>
 </html>
+
 
 
 
